tests/negative_tests/syntax_errors/missing_paren.c
// INVALID - Syntax Error: missing closing parenthesis
// Expected: "expected ')'"
int main( {
    return 0;
}
